# coral-proxygen

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  requirements.txt
cmake-scripts/: FindCoral.cmake  FindFolly.cmake  cmake_uninstall.cmake.in
proxygen/httpserver/: CMakeLists.txt  Filters.h  HTTPServer.cpp  HTTPServer.h  HTTPServerAcceptor.cpp  HTTPServerOptions.h  Mocks.h  RequestHandler.h  RequestHandlerAdaptor.cpp  RequestHandlerAdaptor.h  RequestHandlerFactory.h  ResponseBuilder.h  ResponseHandler.h  ScopedHTTPServer.h  SignalHandler.cpp  SignalHandler.h
proxygen/httpserver/filters/: CMakeLists.txt  DirectResponseHandler.h  RejectConnectFilter.h  ZlibServerFilter.h
proxygen/httpserver/filters/test/: CMakeLists.txt  ZlibServerFilterTest.cpp
proxygen/httpserver/samples/echo/: CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  EchoServer.cpp
proxygen/httpserver/samples/echo/test/: EchoHandlerTest.cpp
proxygen/httpserver/test/: CMakeLists.txt  HTTPServerTest.cpp
proxygen/lib/http/: CMakeLists.txt  HTTPCommonHeaders.template.gperf  HTTPConnector.cpp  HTTPConnector.h  HTTPException.h  HTTPHeaders.cpp  HTTPHeaders.h  HTTPMessage.cpp  HTTPMessage.h  HTTPMessageFilters.h  HTTPMethod.cpp  HTTPMethod.h  RFC2616.cpp  RFC2616.h
proxygen/lib/http/codec/: CMakeLists.txt  FlowControlFilter.cpp  FlowControlFilter.h  HTTP1xCodec.cpp  HTTP1xCodec.h  HTTPChecks.cpp  HTTPChecks.h  HTTPCodec.h  HTTPCodecFilter.cpp  HTTPCodecFilter.h  HTTPCodecPrinter.cpp  HTTPCodecPrinter.h  HTTPParallelCodec.cpp  HTTPParallelCodec.h  SPDYCodec.cpp  SPDYCodec.h  SPDYUtil.cpp  SPDYUtil.h  SPDYVersionSettings.h
proxygen/lib/http/codec/compress/: CMakeLists.txt  GzipHeaderCodec.cpp  GzipHeaderCodec.h  HPACKCodec.cpp  HPACKCodec.h  HPACKContext.cpp  HPACKDecodeBuffer.cpp  HPACKDecodeBuffer.h  HPACKDecoder.cpp  HPACKDecoder.h  HPACKEncodeBuffer.cpp  HPACKEncodeBuffer.h  HPACKEncoder.cpp  HPACKEncoder.h  HPACKHeader.h  HeaderCodec.h  HeaderPiece.h  Huffman.cpp  Huffman.h
proxygen/lib/http/codec/compress/experimental/hpack9/: CMakeLists.txt  HPACKCodec.cpp  HPACKDecoder.cpp  HPACKEncoder.cpp  HPACKEncoder.h
proxygen/lib/http/codec/compress/experimental/hpack9/test/: CMakeLists.txt  HPACKBufferTests.cpp  HPACKCodecTests.cpp  HPACKContextTests.cpp  HuffmanTests.cpp  RFCExamplesTests.cpp
proxygen/lib/http/codec/compress/test/: CMakeLists.txt  HPACKBufferTests.cpp  HPACKCodecTests.cpp  HPACKContextTests.cpp  HTTPArchive.cpp  HTTPArchive.h  HuffmanTests.cpp  RFCExamplesTests.cpp  TestUtil.cpp  TestUtil.h
proxygen/lib/http/codec/experimental/: CMakeLists.txt  HTTP2Codec.cpp  HTTP2Codec.h  HTTP2Framer.cpp  HTTP2Framer.h  HTTPRequestVerifier.h
proxygen/lib/http/codec/experimental/test/: CMakeLists.txt  HTTP2CodecTest.cpp  HTTP2FramerTest.cpp  HTTP2FramerTest.h
proxygen/lib/http/codec/test/: CMakeLists.txt  FilterTests.cpp  HTTP1xCodecTest.cpp  MockHTTPCodec.h  SPDYCodecTest.cpp  TestUtils.cpp  TestUtils.h
proxygen/lib/http/session/: ByteEventTracker.cpp  ByteEventTracker.h  ByteEvents.cpp  ByteEvents.h  CMakeLists.txt  CodecErrorResponseHandler.cpp  CodecErrorResponseHandler.h  HTTP2PriorityQueue.h  HTTPDirectResponseHandler.cpp  HTTPDirectResponseHandler.h  HTTPDownstreamSession.h  HTTPErrorPage.cpp  HTTPErrorPage.h  HTTPEvent.h  HTTPSession.cpp  HTTPSession.h  HTTPSessionAcceptor.cpp  HTTPSessionAcceptor.h  HTTPSessionController.h  HTTPTransaction.cpp  HTTPTransaction.h  HTTPUpstreamSession.h  SimpleController.cpp  SimpleController.h  TransportFilter.cpp  TransportFilter.h
proxygen/lib/http/session/test/: CMakeLists.txt  DownstreamTransactionTest.cpp  HTTPDownstreamSessionTest.cpp  HTTPSessionAcceptorTest.cpp  HTTPSessionMocks.h  HTTPSessionTest.h  HTTPTransactionMocks.h  HTTPUpstreamSessionTest.cpp  MockCodecDownstreamTest.cpp  TestUtils.cpp  TestUtils.h
proxygen/lib/http/test/: CMakeLists.txt  HTTPMessageTest.cpp  MockHTTPMessageFilter.h  RFC2616Test.cpp
proxygen/lib/services/: AcceptorConfiguration.h  CMakeLists.txt  HTTPAcceptor.h  RequestWorker.cpp  Service.h  ServiceWorker.h  WorkerThread.cpp  WorkerThread.h
proxygen/lib/services/test/: AcceptorTest.cpp  CMakeLists.txt
proxygen/lib/ssl/: CMakeLists.txt
proxygen/lib/test/: CMakeLists.txt  TestAsyncTransport.cpp  TestAsyncTransport.h  TestMain.cpp
proxygen/lib/utils/: AsyncTimeoutSet.cpp  AsyncTimeoutSet.h  CMakeLists.txt  ChromeUtils.cpp  ChromeUtils.h  CryptUtil.cpp  CryptUtil.h  Exception.h  FilterChain.h  HTTPTime.cpp  HTTPTime.h  Logging.cpp  Logging.h  ParseURL.cpp  ParseURL.h  RendezvousHash.cpp  TestUtils.h  TraceEvent.cpp  TraceEvent.h  UtilInl.h  ZlibStreamCompressor.cpp  ZlibStreamCompressor.h  ZlibStreamDecompressor.cpp  ZlibStreamDecompressor.h  gen_trace_event_constants.py
proxygen/lib/utils/test/: AsyncTimeoutSetTest.cpp  CMakeLists.txt  CryptUtilTest.cpp  GenericFilterTest.cpp  LoggingTests.cpp  MockTimeoutManager.h  RendezvousHashTest.cpp  ResultBenchmark.cpp  ZlibTests.cpp
